# openproject

./: README.md
compose/: .gitignore  Dockerfile  README.md  docker-compose.yml
compose/jobber/: Dockerfile  deployment.yaml  jobber.conf
compose/jobber/chart/jobber/: Chart.yaml  values.yaml
compose/jobber/chart/jobber/templates/: NOTES.txt  _helpers.tpl  deployment.yaml
compose/my-app/: pyproject.toml
compose/my-app/my_app/: app.py
compose/proxy/: acme.json  traefik.toml  traefik_dynamic.toml  users
compose/space_gantt/: .gitignore  Dockerfile  mypy.ini  pyproject.toml
compose/space_gantt/space_gantt/: app.py
compose/space_gantt/tests/: test_space_gantt.py
